--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     "require": {
         "php": ">=5.4.0",
         "illuminate/support": "4.2.*",
-        "laracasts/commander": "~1.0"
+        "laracasts/commander": "~1.0",
+        "intervention/image": "2.*"
     },
     "autoload": {
         "classmap": [
