--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "joselfonseca/image-manager",
     "description": "Simple image manager for laravel apps",
+    "keywords": ["laravel", "twitter Bootstrap", "plupload", "images management"],
     "authors": [
         {
             "name": "Joselfonseca",
