--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "illuminate/support": "4.2.*@dev",
+        "illuminate/support": "5.0.x-dev",
         "laracasts/commander": "~1.0",
         "intervention/image": "2.*"
     },
