--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "php": ">=5.4.0",
         "illuminate/support": "4.2.9",
         "laracasts/commander": "~1.0",
-        "intervention/image": "2.*"
+        "intervention/image": "2.*",
+        "intervention/imagecache": "2.*"
     },
     "autoload": {
         "classmap": [
