--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,11 @@
         "intervention/image": "2.*",
         "intervention/imagecache": "2.*"
     },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.1.x-dev"
+        }
+    },
     "autoload": {
         "classmap": [
             "src/migrations",
